--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,6 @@
     <string name="textview2">Or</string>
     <string name="textview3">Are you looking for a donor.</string>
     <string name="sub">Submit</string>
-    <string name="textview">Please enter your data :</string>
+    <string name="textview">Please enter your data </string>
     <string name="welcome">"Welcome . . "</string>
 </resources>
