--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="textview">Please enter your data </string>
     <string name="welcome">"Welcome . . "</string>
     <string name="MedScan">MEDSCAN</string>
-    <string name="feedback">Write here any suggestions you want to be presented in a more appropriate way, or if you have any comments.\nwe hope we helped you..</string>
+    <string name="feedback">Write here if you have any comments..</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">close navigation drawer</string>
