--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="text3_feedback">would love to know your feedback </string>
     <string name="text4_feedback">on our app ?</string>
     <string name="submit">Submit</string>
+    <string name="thanks">Thanks !\nYour opinion matters..\nWe hope we helped you.</string>
 </resources>
