--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,8 +59,7 @@
     <string name="confirm_pass">Confirm new password</string>
     <string name="next">Next</string>
     <string name="back">Back</string>
-    <string name="first">first name</string>
-    <string name="last">last name</string>
+    <string name="first">Full name</string>
     <string name="email">Email</string>
     <string name="password2">password</string>
     <string name="confirm_password">Confirm password</string>
