--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,9 @@
     <string name="best_hospitals">"Best hospitals "</string>
     <string name="ok">Ok</string>
     <string name="authentication">Authentication</string>
+    <string name="about1">We are a team looking for your comfort</string>
+    <string name="about2">We care that you save time and money</string>
+    <string name="about3">if you want to check on your health.</string>
+    <string name="about4">Or talk to a doctor and benefit from his advice</string>
+    <string name="about5">We wish you better days</string>
 </resources>
