--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="about3">if you want to check on your health.</string>
     <string name="about4">Or talk to a doctor and benefit from his advice</string>
     <string name="about5">We wish you better days</string>
+    <string name="Successful_rays">Successful rays !</string>
 </resources>
