--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -75,4 +75,5 @@
     <string name="kid_doc6">دكتور : محمد ضيف</string>
     <string name="best_hospitals">أفضل المستشفيات</string>
     <string name="ok">حسنا</string>
+    <string name="Eye_city">مدينه العيون التخصصيه</string>
 </resources>
