--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -76,4 +76,6 @@
     <string name="best_hospitals">أفضل المستشفيات</string>
     <string name="ok">حسنا</string>
     <string name="Eye_city">مدينه العيون التخصصيه</string>
+    <string name="english">الانجليزية</string>
+    <string name="arabic">العربية</string>
 </resources>
