--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -93,5 +93,8 @@
     <string name="about4">Or talk to a doctor and benefit from his advice</string>
     <string name="about5">We wish you better days</string>
     <string name="Successful_rays">Successful rays !</string>
+    <string name="english">English</string>
+    <string name="arabic">Arabic</string>
+
     <string name="Eye_city">Eye city</string>
 </resources>
