--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,4 +97,14 @@
     <string name="arabic">Arabic</string>
 
     <string name="Eye_city">Eye city</string>
+    <string name="age">Age </string>
+    <string name="albumin">Albumin </string>
+    <string name="blood_glucose_rendom">blood glucose rendom</string>
+    <string name="serum_creatinine">Serum Creatinine</string>
+    <string name="white_blood_cell_count">White blood cell count</string>
+    <string name="blood_pressure">blood pressure</string>
+    <string name="sugar">Sugar</string>
+    <string name="blood_urea">blood urea</string>
+    <string name="potassium">Potassium</string>
+    <string name="dr_mohamed_el_samlawy">Dr.Mohamed ElSamlawy</string>
 </resources>
