--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -307,5 +307,43 @@
     <string name="consultant_of_internal_chest_diseases_and_allergies_ain_shams_university_chest_and_respiratory_doctor_specialized_in_respiratory_allergy_pediatric_chest_and_respiratory_adult_chest_and_respiratory_and_general_internal_medicine">Consultant of internal chest diseases and allergies - Ain Shams University. Chest and Respiratory Doctor specialized in Respiratory Allergy, Pediatric Chest and Respiratory, Adult Chest and Respiratory and General Internal Medicine</string>
     <string name="_01227767861">01227767861</string>
     <string name="nasr_city_abbas_el_akkad_street">Nasr City: Abbas El Akkad Street</string>
+    <string name="you_are_infected_with_actinic_keratosis">You are infected with Actinic keratosis</string>
+    <string name="you_are_infected_with_nintraepithelial_carcinoma">You are infected with Intraepithelial carcinoma</string>
+    <string name="you_are_infected_with_nbasal_cell_carcinoma">You are infected with Basal cell carcinoma</string>
+    <string name="you_are_infected_with_seborrheic_keratosis">You are infected with Seborrheic keratosis</string>
+    <string name="you_are_infected_with_dermatofibroma">You are infected with dermatofibroma</string>
+    <string name="you_are_infected_with_melanoma">You are infected with Melanoma</string>
+    <string name="you_are_infected_with_melanocytic_nevi">You are infected with Melanocytic nevi</string>
+    <string name="your_skin_is_healthy">Your skin is healthy</string>
+    <string name="skin1_info">An actinic keratosis is a rough, scaly patch of skin that forms from exposure to the sun for several years. It most often appears on the face, lips, ears, forearms, scalp, neck, or back of the hands.\n Also known as a solar keratosis, it grows slowly and usually first appears after a person is over 40 years old. You can reduce the risk of this skin condition by reducing sun exposure and protecting the skin from UV rays.\n If an actinic keratosis is left untreated, it may turn into a type of skin cancer called squamous cell carcinoma, with a probability of 5% to 10%.</string>
+    <string name="dr_amr_said">Dr. Amr said</string>
+    <string name="lecturer_of_ophthalmology_and_surgery_faculty_of_medicine_alexandria_university_consultant_of_cataract_corneal_lasik_and_lens_implant_surgeries_member_of_the_european_society_for_vision_correction_and_cataracts">Lecturer of ophthalmology and surgery, Faculty of Medicine, Alexandria University….. Consultant of cataract, corneal, LASIK, and lens implant surgeries…. Member of the European Society for Vision Correction and Cataracts</string>
+    <string name="_01226154154">01226154154</string>
+    <string name="_5th_sayed_fahmy_street_above_baraka_bank_smouha">5th Sayed Fahmy Street Above Baraka Bank, Smouha</string>
+    <string name="lecturer_of_ophthalmology_and_surgery_faculty_of_medicine_alexandria">Lecturer of ophthalmology and surgery, Faculty of Medicine, Alexandria ...</string>
+    <string name="consultant_cataract_surgeon_md_ophthalmology_fellow_of_the_royal">Consultant Cataract Surgeon / MD Ophthalmology. Fellow of the Royal...</string>
+    <string name="dr_rasha_moussa">Dr. Rasha Moussa</string>
+    <string name="consultant_cataract_surgeon_md_ophthalmology_fellow_of_the_royal_college_of_surgeons_of_glasgow_harvard_teaching_training_fellowship">Consultant Cataract Surgeon / MD Ophthalmology. Fellow of the Royal College of Surgeons of Glasgow. Harvard Teaching Training Fellowship.</string>
+    <string name="_01211033637">01211033637</string>
+    <string name="_25_mohy_el_din_abou_el_ezz_street_first_floor_cairo">25 Mohy El-Din Abou El Ezz Street - first floor , cairo</string>
+    <string name="consultant_of_ophthalmology_and_lasik_at_the_international_medical_centerdoctor_of_ophthalmology">Consultant of ophthalmology and LASIK at the International Medical CenterDoctor of ophthalmology ...</string>
+    <string name="dr_amr_hussein">Dr. Amr Hussein</string>
+    <string name="consultant_of_ophthalmology_and_lasik_at_the_international_medical_centerdoctor_of_ophthalmology_specialized_in_lasik_vision_correction_and_cataracts_adult_ophthalmology_and_pediatric_ophthalmology">Consultant of ophthalmology and LASIK at the International Medical CenterDoctor of ophthalmology specialized in LASIK, vision correction and cataracts, adult ophthalmology and pediatric ophthalmology.</string>
+    <string name="_02_37605285">02 37605285</string>
+    <string name="_139_el_tahrir_ad_doqi_a_dokki_giza_governorate">139 El Tahrir, Ad Doqi A, Dokki, Giza Governorate</string>
+    <string name="md_ophthalmology_consultant_of_plastic_surgery_of_the_eyelids">MD Ophthalmology - Consultant of plastic surgery of the eyelids ...</string>
+    <string name="dr_youmna_amr">Dr. Youmna Amr</string>
+    <string name="md_ophthalmology_consultant_of_plastic_surgery_of_the_eyelids_tear_ducts_and_eye_orbits">MD Ophthalmology - Consultant of plastic surgery of the eyelids, tear ducts and eye orbits</string>
+    <string name="_01289032090">01289032090</string>
+    <string name="al_haram_eye_center_al_ahram_street_in_front_of_the_european_hotel_al_haram">Al Haram Eye Center. Al-Ahram Street in front of the European Hotel Al-Haram</string>
+    <string name="instructor_of_ophthalmology_and_laser_ophthalmologist_specialized_in_lasik">Instructor of ophthalmology and laser, ophthalmologist specialized in LASIK...</string>
+    <string name="dr_amr_rady">Dr. Amr Rady</string>
+    <string name="instructor_of_ophthalmology_and_laser_ophthalmologist_specialized_in_lasik_vision_correction_cataracts_pediatric_ophthalmology_retinal_and_vitreous_surgery">Instructor of ophthalmology and laser, ophthalmologist specialized in LASIK, vision correction, cataracts, pediatric ophthalmology, retinal and vitreous surgery.</string>
+    <string name="_01006098955">01006098955</string>
+    <string name="cairo_el_shorouk_city_city_center_1_el_atebaa_tower">Cairo: El Shorouk City - City Center 1 - El Atebaa Tower</string>
+    <string name="ophthalmologist_specialized_in_adult_eyes_retinal_and_vitreous_surgery_pediatric">Ophthalmologist specialized in Adult Eyes, Retinal and Vitreous Surgery, Pediatric ...</string>
+    <string name="dr_isis_sayed">Dr. Isis Sayed</string>
+    <string name="ophthalmologist_specialized_in_adult_eyes_retinal_and_vitreous_surgery_pediatric_ophthalmology_and_lasik_vision_correction_and_cataract">Ophthalmologist specialized in Adult Eyes, Retinal and Vitreous Surgery, Pediatric Ophthalmology and Lasik, Vision Correction and Cataract</string>
+    <string name="al_ahram_gardens_184_army_road_zone_a_hadayek_al_ahram_fourth_gate_next_to_el_far_pharmacy">Al-Ahram Gardens 184 Army Road - Zone A, Hadayek Al-Ahram, Fourth Gate - next to El Far Pharmacy</string>
 
 </resources>
