--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="button1">مريض</string>
     <string name="button2">"دكتور "</string>
-    <string name="textview1" translatable="false">هل انت دكتور وتريد ان تشارك معنا ؟</string>
+    <string name="textview1">هل انت دكتور وتريد ان تشارك معنا ؟</string>
     <string name="textview3">تبحث عن نصائح طبية ؟</string>
     <string name="Near_to_you">"قريبون منك "</string>
     <string name="text">"نحن نساعدك لتحصل علي فرصه افضل "</string>
@@ -42,7 +42,7 @@
     <string name="text1_feedback">رأيك يهمنا ..!</string>
     <string name="next">التالي</string>
     <string name="back">السابق</string>
-    <string name="feedback" translatable="false">"اكتب هنا اذا كان لديك بعض التعليقات .. "</string>
+    <string name="feedback">"اكتب هنا اذا كان لديك بعض التعليقات .. "</string>
     <string name="profile">الصفحه الشخصية</string>
     <string name="recommend">"اقتراحات "</string>
     <string name="about_us">"معلومات عنا "</string>
@@ -54,7 +54,7 @@
     <string name="textview2">أم</string>
     <string name="sub">إرسال</string>
     <string name="submit">إرسال</string>
-    <string name="successful" translatable="false">تم تعيين كلمة المرور بنجاح</string>
+    <string name="successful">تم تعيين كلمة المرور بنجاح</string>
     <string name="hi_doctor">"اهلا دكتور .. "</string>
     <string name="textview">"من فضلك اكمل بياناتك "</string>
     <string name="medical">تخصصك الطبي</string>
@@ -67,15 +67,106 @@
     <string name="give">"نقدم لك أفضل الأطباء والمستشفيات    .. "</string>
     <string name="give2">في المجالات التالية</string>
     <string name="best_doctors">أفضل الأطباء</string>
-    <string name="kid_doc1">دكتور : نرمين دياب</string>
-    <string name="kid_doc2">دكتور : ماجد حبيب</string>
-    <string name="kid_doc3">دكتور : سمـر السيد</string>
-    <string name="kid_doc4">دكتور : حسن فاروق</string>
-    <string name="kid_doc5">"دكتور : رانيا الشـال "</string>
-    <string name="kid_doc6">دكتور : محمد ضيف</string>
     <string name="best_hospitals">أفضل المستشفيات</string>
     <string name="ok">حسنا</string>
     <string name="Eye_city">مدينه العيون التخصصيه</string>
     <string name="english">الانجليزية</string>
     <string name="arabic">العربية</string>
+    <string name="skin1_info">التقران السفعي عبارة عن رقعة خشنة متقشرة من الجلد تتكون من التعرض لأشعة الشمس لعدة سنوات. غالبًا ما يظهر على الوجه أو الشفتين أو الأذنين أو الساعدين أو فروة الرأس أو الرقبة أو مؤخرة اليدين.  يُعرف أيضًا باسم التقرن الشمسي ، وينمو ببطء وعادة ما يظهر لأول مرة بعد أن يزيد عمر الشخص عن 40 عامًا. يمكنك تقليل مخاطر هذه الحالة الجلدية عن طريق الحد من التعرض لأشعة الشمس وحماية الجلد من الأشعة فوق البنفسجية.  إذا تُرك التقران السفعي دون علاج ، فقد يتحول إلى نوع من سرطان الجلد يسمى سرطان الخلايا الحرشفية ، مع احتمال 5٪ إلى 10٪.</string>
+    <string name="age">العمر</string>
+    <string name="Successful_rays">"الاشعة سلمية ! "</string>
+    <string name="chat">محادثة</string>
+    <string name="select_doctor">اختـار دكتور</string>
+    <string name="type_a_message">"اكتب رسالتك .... "</string>
+    <string name="Continue">استمر</string>
+    <string name="doctor_name">"اسم الدكتور : "</string>
+    <string name="medical_specialty">"المجال الطبي : "</string>
+    <string name="clinic_address">"عنوان العيادة : "</string>
+    <string name="phone2">"رقم التليفون : "</string>
+    <string name="available_time">"الوقت المتاح : "</string>
+    <string name="other_inf">"معلومات اخري : "</string>
+    <string name="your_lung_is_healthy">"رئتـك سليمة "</string>
+    <string name="please_upload_a_picture_of_the_skin">"من فضلك قم برفع صورة لجلدك "</string>
+    <string name="upload_now">"ارفع الان "</string>
+    <string name="dr_dalia_mohsen">"دكتور : داليا محسن "</string>
+    <string name="dr_ghada_rabie">"دكتور : غادة ربيع "</string>
+    <string name="dr_maher_mahmoud">دكتور : ماهـر محمود</string>
+    <string name="dr_ghada_abdelhadi">دكتور : غادة عبدالهادي</string>
+    <string name="dr_hany_khalil">دكتور : هاني خليل</string>
+    <string name="_300_egp">"300 جنيه "</string>
+    <string name="_350_egp">350 جنيه</string>
+    <string name="_400_egp">400 جنيه</string>
+    <string name="_500_egp">500 جنيه</string>
+    <string name="_100_egp">100 جنيه</string>
+    <string name="dr_nermin_diab">دكتور : نرمين ديـاب</string>
+    <string name="_150_egp">150 جنيه</string>
+    <string name="update">اضغط للرفـع</string>
+    <string name="please_upload_your_rays">"من فضلك قم برفع الاشعة "</string>
+    <string name="dr_maged_habib">دكتور : ماجد حبيب</string>
+    <string name="dr_samar_el_sayed">دكتور  : سمـر السيد</string>
+    <string name="dr_hussain_farouk">دكتور : حسـن فاروق</string>
+    <string name="dr_rania_al_shall">دكتور : رانيـا الشـال</string>
+    <string name="_160_egp">160 جنيه</string>
+    <string name="dr_mohamed_deif">دكتور : محمد ضيـف</string>
+    <string name="_200_egp">200 جنيه</string>
+    <string name="i_m_sorry_nyour_rays_aren_t_healthy">"نعتذر .. اشعتك ليست سليمة .. "</string>
+    <string name="please_upload_a_picture_of_the_eye">"من فضلك قم برفع صورة للعين "</string>
+    <string name="you_are_infected_with_covid_19">"انت مصاب ب كوفيد - 19 "</string>
+    <string name="we_have_more_than_field">"لدينا أكثر من مجال .. "</string>
+    <string name="lungs">الرئتـين</string>
+    <string name="kidneys">الكلية</string>
+    <string name="eyes">العيون</string>
+    <string name="skin">الجلد</string>
+    <string name="dr_ahmed_ezzat">دكتور : أحمد عزت</string>
+    <string name="dr_fatima_zahra">دكتور : فاطيمة زهرة</string>
+    <string name="dr_emad_eddin">دكتور : عماد الدين</string>
+    <string name="dr_salma_abdelhady">دكتور : سلمي عبدالهادي</string>
+    <string name="dr_haitham_sami">دكتور : هيثم سامي</string>
+    <string name="dr_amani_khalil">دكتور : أماني خليل</string>
+    <string name="_140_egp">140 جنيه</string>
+    <string name="_250_egp">250 جنيه</string>
+    <string name="your_skin_is_healthy">"جلدك صحي .. "</string>
+    <string name="dr_amr_said">"دكتور : عمرو سعيد "</string>
+    <string name="dr_rasha_moussa">دكتور : رشـا موسى</string>
+    <string name="dr_amr_hussein">دكتور : عمرو حسـن</string>
+    <string name="dr_youmna_amr">دكتور : يمنى عمرو</string>
+    <string name="dr_amr_rady">دكتور : عمرو راضي</string>
+    <string name="you_can_upload_a_picture_of_your_skin_and_we_will_n_tell_you_if_you_suffer_from_one_of_these_diseases">"يمكنك رفع صورة للجلد ونحن سنخبرك اذا كنت تعاني من احد هذه الامراض : "</string>
+    <string name="skin_diseases">"امراض الجلد "</string>
+    <string name="click_on_the_name_of_the_disease_to_know_some_information_about_it">"اضغط علي اسم المرض لتعرف بعض المعلومات عنه "</string>
+    <string name="authentication">مصادقة</string>
+    <string name="about1">"نحن فريق يبحث عن راحتك "</string>
+    <string name="about2">"نحن نهتم بأنك توفر الوقت والمال "</string>
+    <string name="about3">"إذا كنت تريد التأكد من صحتك "</string>
+    <string name="about4">"أو التحدث مع دكتور والاستفادة من نصائحه "</string>
+    <string name="about5">نتمني لك ايام أفضل</string>
+    <string name="we_wish_you_good_health">"نتمني لك صحة أفضل "</string>
+    <string name="please_upload_your_report">من فضلك قـم برفع التقرير</string>
+    <string name="text2_feedback">"نحن نعمل بجد لخدمتك بشكل أفضل و "</string>
+    <string name="text3_feedback">"نحب أن نعرف ملاحظاتك "</string>
+    <string name="text4_feedback">"علي تطبيقنا ؟ "</string>
+    <string name="blood_urea">"اليوريا في الدم "</string>
+    <string name="sugar">"السكر "</string>
+    <string name="blood_pressure">"ضغط الدم "</string>
+    <string name="white_blood_cell_count">عدد خلايا الدم البيضاء</string>
+    <string name="serum_creatinine">"الكرياتينين في الدم "</string>
+    <string name="blood_glucose_rendom">الجلوكوز في الدم</string>
+    <string name="albumin">الزلال</string>
+    <string name="potassium">البوتاسيوم</string>
+    <string name="dr_mohamed_el_samlawy">دكتور : محمد السملاوي</string>
+    <string name="actinic_keratosis">التقران السفعي</string>
+    <string name="intraepithelial_carcinoma">السرطان داخل الظهارة</string>
+    <string name="basal_cell_carcinoma">سرطان الخلايا القاعدية</string>
+    <string name="dermatofibroma">ورم ليفي جلدي</string>
+    <string name="melanoma">سرطان الجلد</string>
+    <string name="melanocytic_nevi">الوحمات الصباغية</string>
+    <string name="seborrheic_keratosis">تقران مثي</string>
+    <string name="skin2_info">الساركوما شبيهة الظهارة هي نوع نادر بطيء النمو من سرطان الأنسجة الرخوة. تبدأ معظم الحالات في الأنسجة الرخوة تحت جلد الأصابع أو اليد أو الساعد أو أسفل الساق أو القدم ، على الرغم من أنها يمكن أن تؤثر على مناطق أخرى من الجسم.  عادةً ما تبدأ الساركوما الشبيهة بالظهارة كنمو صغير أو كتلة صلبة ولكنها غير مؤلمة. يبدأ عادةً كتكوين واحد متطور ، ولكن يمكن أن تحدث تكوينات متعددة بمرور الوقت أثناء طلب الشخص العلاج. تظهر الأورام اللحمية أحيانًا على شكل قرح لا تقبل العلاج ، وتبدو كجروح مفتوحة فوق التكوينات النامية.</string>
+    <string name="your_kidney_is_healthy">"كليتك صحية .. "</string>
+    <string name="dr_isis_sayed">"دكتور : ايزيس سيد "</string>
+    <string name="skin3_info">سرطان الخلايا القاعدية الوحمانية عبارة عن نوع من سرطان الجلد. يبدأ سرطان الخلايا القاعدية الوحمانية في الخلايا القاعدية — نوع من الخلايا الموجودة داخل الجلد وهذه الخلايا تنتج خلايا جديدة للبشرة عوضًا عن الخلايا التي تموت.  ويظهر سرطان الخلايا القاعدية الوحمانية عادةً في شكل نتوء شفاف قليلًا على الجلد، على الرغم من أنه قد يتَّخذ أشكالًا أخرى. يحدث سرطان الخلايا القاعدية الوحمانية في الأغلب في أجزاء الجلد التي تكون مُعرَّضة للشمس، مثل رأسك ورقبتك.  ويُعتقد أن غالبية حالات سرطان الخلايا القاعدية الوحمانية تحدث بسبب التعرُّض الطويل للأشعة فوق البنفسجية الصادرة من الشمس.</string>
+    <string name="skin4_info">التقران المثي هو زوائد جلدية غير سرطانية شائعة. وتزيد احتمالية الإصابة به مع التقدم في السن.  عادة ما يظهر التقران المثي باللون البني أو الأسود أو الأسمر الفاتح. تبدو الزوائد شمعية أو متقشرة وبارزة قليلًا. تظهر الزوائد بالتدريج، عادةً في الوجه أو الرقبة أو الصدر أو الظهر.  التقران المثي حالة غير مؤذية وغير مُعدية. وهذه الحالة لا تحتاج إلى علاج، ولكن يمكنك أن تختار التخلص منها إن أصبحت متهيجة من احتكاكها بالملابس أو إن أزعجك مظهرها.</string>
+    <string name="skin5_info">"إنه مرض جلدي يحدث فيه نمو صغير غير سرطاني على الجلد. يتكون الجلد من عدة طبقات بما في ذلك طبقة الخلايا الدهنية والبشرة والأدمة. ويحدث هذا المرض بالتزامن مع حدوث نمو غير طبيعي في الأدمة. إنه شائع جدًا ولا علاقة له بسرطان الجلد ، ومن الشائع أن يصاب الشخص بهذا المرض في أكثر من منطقة واحدة من الجسم. إنه غير مؤلم وليس له آثار صحية سلبية. "</string>
+    <string name="skin6_info">ينشأ الورم الميلانيني - وهو أخطر أنواع سرطان الجلد - في الخلايا (الميلانينية) التي تنتج صبغة الميلانين التي تمنح جلدك لونه. قد يصيب الورم الميلانيني أيضًا عينيك، ونادرًا ما يصيب أعضاء من جسمك كالأنف أو الحلق من الداخل.  ولا يُعلم بشكل واضح السبب الدقيق لجميع الأورام الميلانينية، لكن التعرض للأشعة فوق البنفسجية (UV) المنبعثة من الشمس أو مصابيح وأسرّة التسمير يزيد من فرص إصابتك بورم ميلانيني. قد يساعدك الحد من التعرض للأشعة فوق البنفسجية في تقليل فرص الإصابة بورم ميلانيني.  تزيد احتمالية الإصابة بالورم الميلانيني لدى الأشخاص الذين تقل أعمارهم عن 40 عامًا، وخصوصًا النساء. يمكن أن تساعد مؤشرات خطر سرطان الجلد في ضمان اكتشاف التغيرات السرطانية وعلاجها قبل انتشار السرطان. فعلاج الورم الميلانيني بنجاح أمر ممكن إذا اكتُشف الورم مبكرًا.</string>
+    <string name="skin7_info">الشامات هي نوع شائع من حالات نمو الجلد. غالبًا ما تظهر على هيئة بقع صغيرة ذات لون بني داكن وتنتج من مجموعات من الخلايا الصباغية. تظهر الشامات عامةً في أثناء مرحلة الطفولة والمراهقة. يمتلك معظم الأشخاص نحو 10 إلى 40 شامة، بعضها قد يتغير مظهرها أو تختفي بمرور الوقت.  تُعد معظم الشامات غير ضارة. نادرًا ما تصبح سرطانية. تعتبر مراقبة الشامات وغيرها من البقع المصطبغة خطوة مهمة في الكشف عن سرطان الجلد، وخاصةً الورم الميلاني الخبيث.  الاسم الطبي للشامات هو الوحمة.</string>
 </resources>
